Fix input alignment issue in product card. Return h1 instead of div in heading component.

--- a/src/design-system/components/atoms/inputs/input-text/input-text.module.css
+++ b/src/design-system/components/atoms/inputs/input-text/input-text.module.css
@@ -1,6 +1,5 @@
 .inputWrapper {
   position: relative;
-  width: 100%;
 }
 
 .inputText {
